Update main.css to fix blockquote dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@
   body a {
     color: #809fff;
   }
+  
+  blockquote {
+    background: #292929;
+  }
 }
 
 body {
